--- a/src/App.css
+++ b/src/App.css
@@ -50,17 +50,6 @@ p::before {
   content: "⚠ ";
 }
 
-input {
-  display: block;
-  box-sizing: border-box;
-  width: 100%;
-  border-radius: 4px;
-  border: 1px solid white;
-  padding: 10px 15px;
-  margin-bottom: 10px;
-  font-size: 14px;
-}
-
 label {
   line-height: 2;
   text-align: left;
@@ -84,6 +73,7 @@ input[type="submit"] {
   font-weight: 100;
   letter-spacing: 10px;
   cursor: pointer;
+  width: 100%;
 }
 
 button[type="submit"]:hover,
@@ -164,4 +154,15 @@ textarea {
 }
 .form-hidden {
   display: none;
+}
+.App {
+  display: flex;
+  flex-direction: column;
+}
+.rating-wrapper {
+  display: flex;
+}
+.form-modal__input-star {
+  opacity: 0;
+  pointer-events: none;
 }
